After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 673333 - vorbisidec conflicts with vorbisdec
vorbisidec conflicts with vorbisdec
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other All
: Normal minor
: 0.10.37
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-04-02 03:24 UTC by LRN
Modified: 2012-05-16 14:30 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description LRN 2012-04-02 03:24:05 UTC
When both vorbis and tremor plugins are installed, i get this when building the documentation (i assume this will also come up every time gstreamer-based application runs):

(gst-plugins-base-libs-scan.exe:3452): GLib-GObject-WARNING **: cannot register existing type `GstVorbisDec'
(gst-plugins-base-libs-scan.exe:3452): GLib-CRITICAL **: g_once_init_leave: assertion `result != 0' failed
(gst-plugins-base-libs-scan.exe:3452): GStreamer-CRITICAL **: gst_element_register: assertion `g_type_is_a (type, GST_TYPE_ELEMENT)' failed

The reason is that both tremor and vorbis plugins share GstVorbisDec class, and both will try to register it in its plugin_init() function when calling gst_vorbis_dec_get_type().

It will probably be necessary to give tremor a separate class (it might share the implementation with GstVorbisDec, but it must still be separate from it, at least as far as GObject is concerned).

Since simultaneous use of tremor and vorbis is non-trivial and makes little sense (to me), i'm giving this a "minor" severity.
Comment 1 Tim-Philipp Müller 2012-05-16 14:30:05 UTC
commit 9cad400d3ddbc4500c3c779fc9ef8a2d26ed94f6
Author: Tim-Philipp Müller <tim.muller@collabora.co.uk>
Date:   Wed May 16 15:10:41 2012 +0100

    vorbis: give libvorbis-based decoder and vorbisidec decoder different type names
    
    Should fix "cannot register existing type `GstVorbisDec'" criticals
    when both libvorbis and vorbisidec are available.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=673333