vorbis: give libvorbis-based decoder and vorbisidec decoder different type names

Should fix "cannot register existing type `GstVorbisDec'" criticals
when both libvorbis and vorbisidec are available.

https://bugzilla.gnome.org/show_bug.cgi?id=673333