ext/vorbis/gstvorbisdeclib.h
@@ -43,8 +43,6 @@
 
 #define GST_VORBIS_DEC_DEFAULT_SAMPLE_WIDTH           (32)
 
-#define GST_VORBIS_DEC_GLIB_TYPE_NAME      GstVorbisDec
-
 #else /* TREMOR */
 
 #define GST_VORBIS_DEC_DESCRIPTION "decode raw vorbis streams to integer audio"
@@ -61,11 +59,8 @@
 #define GST_VORBIS_DEC_DEFAULT_SAMPLE_WIDTH           (16)
 
 /* we need a different type name here */
-#define GST_VORBIS_DEC_GLIB_TYPE_NAME      GstIVorbisDec
-
-/* and still have it compile */
-typedef struct _GstVorbisDec               GstIVorbisDec;
-typedef struct _GstVorbisDecClass          GstIVorbisDecClass;
+#define GstVorbisDec GstIVorbisDec
+#define GstVorbisDecClass GstIVorbisDecClass
 
 #endif /* TREMOR */
 
